# GMRSS_MPE

./: GMRSS_MPEVersion.h.in  readme.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
commandline/: .gitignore  CMakeLists.txt  GMRSS_MPEbash.cpp  GMRSS_MPEbash.h  MultiProgressBar.cpp  main.cpp  readme.md
commandline/src/: main.cpp
desktop/: CMakeLists.txt  GMRSS_MPEVersion.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  readme.md
desktop/Icons/: logo.icns  makeicons.sh
materials/: 01_海洋物理环境重磁响应模拟系统_初步设计_杜劲松_20210715.doc  02_基本数学与物理常数表以及CGCS2000椭球参数表_20190325.doc
materials/OceanWave/: 二维海浪波高与海水流速模拟.cpp  海浪的计算机模拟算法文档.doc
materials/OceanWave_Mag/: 二维海浪感应磁场三分量模拟.cpp  海浪磁力响应模拟算法文档.doc
src/libraries/: CMakeLists.txt
src/libraries/include/: OceanWave.h
src/libraries/src/: OceanWave.cpp
tutorial/: plot.sh
